--- a/Syllabus/soci301_syllabus.tex
+++ b/Syllabus/soci301_syllabus.tex
@@ -111,7 +111,7 @@
 
   \textbf{Dr.~Martín Jacinto}\\
   Email: \href{mailto:mjacinto@csuchico.edu}{\nolinkurl{mjacinto@csuchico.edu}}\\
-  Preferred contact: Blackboard Messaging\\
+  Preferred contact: Canvas Messaging\\
   Office Hours: 10:00 a.m. - 12:00 p.m. Wed\\
   Office: TBD\\
   Correspondence policy: Respond within 24-48 hours\\
@@ -122,13 +122,16 @@
 \noindent \begin{tabular*}{\textwidth}{ @{\extracolsep{\fill}} lr @{\extracolsep{\fill}}}
 \textbf{\underline{Class information}}\\
   Classroom: Butte Hall 308\\
-  Class Hours: 2:00 pm - 3:15 pm TuTh\\
+  Class Hours: 2:00 p.m. - 3:15 p.m. TuTh\\
     \\
 	\end{tabular*}\\
 
 
 \vspace{2mm}
 
+
+\hypertarget{indigenous-land-statement}{%
+\section{Indigenous Land Statement}\label{indigenous-land-statement}}
 
 \begin{quote}
 \emph{Please be aware that the land on which our campus resides occupies
@@ -228,7 +231,7 @@ Objectives}\label{sociology-program-student-learning-objectives}}
 \hypertarget{course-status}{%
 \subsection{Course Status}\label{course-status}}
 
-This course is a requirement for the sociology major.It has a
+This course is a requirement for the sociology major. It has a
 prerequisite of SOCI 300, Classical Social Theory, though this
 prerequisite may be waived with permission of the instructor. \emph{Note
 that if you take SOCI 301 prior to or concurrent with SOCI 300, you will
@@ -276,7 +279,7 @@ Readings}\label{additional-required-readings}}
 \tightlist
 \item
   Primary texts and other required readings will be available
-  electronically on the Blackboard course page and on Perusall. An
+  electronically on the Canvas course page and on Perusall. An
   \colorbox{Goldenrod}{\bf{“E-Posting”}} notation is made next to each
   of these readings in the syllabus. These readings will only be
   available to students enrolled in the course, and are to be used only
@@ -292,18 +295,17 @@ Course}\label{structure-and-character-of-a-chicoflex-course}}
   \textbf{Since this is a
   \href{https://www.csuchico.edu/tlp/chicoflex/faq.shtml\#whatiscoflex}{\emph{ChicoFlex}
   Course}, ALL communications for this course will be conducted via
-  Blackboard Learn}. At Chico State, ``this class meets at set
-  days/times in-person (requiring social distancing and face coverings)
-  and is paired with another section taught simultaneously online by the
-  same instructor.'' \textbf{All times will use Pacific Standard Time
-  (PST).} This means that this class includes campus students who come
-  to a physical class, online students who show up ``live,'' and online
+  Canvas Learn}. At Chico State, ``this class meets at set days/times
+  in-person (requiring social distancing and face coverings) and is
+  paired with another section taught simultaneously online by the same
+  instructor.'' \textbf{All times will use Pacific Standard Time (PST).}
+  This means that this class includes campus students who come to a
+  physical class, online students who show up ``live,'' and online
   students who watch the archived lectures. Therefore, it is the
-  student's responsibility to check Blackboard Learn regularly and to
-  check in with the professor or review the Syllabus re: any
-  administrative questions. \emph{Students are required to email the
-  instructor from Blackboard Learn (this will ensure instructor access
-  to emails).}
+  student's responsibility to check Canvas Learn regularly and to check
+  in with the professor or review the Syllabus re: any administrative
+  questions. \emph{Students are required to email the instructor from
+  Canvas Learn (this will ensure instructor access to emails).}
 \item
   Also, given the fact that we're still in a global pandemic, the course
   will proceed fluidly. I want this class to work for all of us and will
@@ -324,12 +326,12 @@ Course}\label{structure-and-character-of-a-chicoflex-course}}
   not able to resolve the issue, please email me with a description of
   the problem, the name of the person you spoke to in that office, what
   they and/or you are doing to resolve the problem, and the expected
-  timeline for its resolution. If you are having trouble with Blackboard
+  timeline for its resolution. If you are having trouble with Canvas
   Learn during a quiz or other assignment, take a screen shot or photo
   of the computer screen and the error message you receive and email it
   to me AND contact ITSS at 530-898-6000. If you experience technical
   difficulties while submitting an assignment, call ITSS at
-  1-800-898-6000 and send a copy of the assignment to me via Blackboard
+  1-800-898-6000 and send a copy of the assignment to me via Canvas
   Learn. If any of these things happen when ITSS is closed, please
   follow up with them immediately the next business day. You MUST
   contact ITSS to resolve the issue if you are asking for any kind of
@@ -376,7 +378,7 @@ keep me updated as you learn more about your health status.
 \hypertarget{attendance}{%
 \section{Attendance Policy}\label{attendance}}
 
-\textbf{Attendance and Ongoing Participation in Sociology Courses is
+\textbf{Attendance and ongoing participation in sociology courses is
 mandatory in all sociology classes and is essential to your success in
 this course.} Only documented emergencies will constitute excused
 absences or assignments. Documentation will only be accepted within one
@@ -398,15 +400,15 @@ they will receive a letter grade based on their performance.
 \begin{itemize}
 \item
   \textbf{No Show Drop:} You must complete a designated discussion post,
-  quiz, or practice activity by Thursday of the first week of class or
-  you may be dropped as a no-show. Students who do not complete
-  \textbf{any} work in the first two weeks will be dropped.
+  quiz, or practice activity by Friday of the first week of class or you
+  may be dropped as a no-show. Students who do not complete \textbf{any}
+  work in the first two weeks will be dropped.
 \item
   \textbf{Excessive Absence Drop:} If more than two consecutive weeks of
   non-participation is observed by the instructor the student may be
   dropped. If you do not participate in each week's participation
-  activities (in class, online, or Perusall) and complete at least one
-  quiz or practice activity, you will be considered
+  activities (during class, online activities, or Perusall) and complete
+  at least one quiz or practice activity, you will be considered
   ``non-participating'' and subject to being dropped from the course.
 \end{itemize}
 
@@ -581,22 +583,25 @@ or perspective, extension to another topic or perspective, paraphrase
 part of the text.
 
 \hypertarget{quizzes}{%
-\subsection{Quizzes (20\% of Final Grade; 5\% each)}\label{quizzes}}
+\subsection{Quizzes (20\% of Final Grade; 4\% each)}\label{quizzes}}
 
-Four quizzes are required in this class. The quizzes will cover
-theories, ideas, and concepts from the course readings and lectures.
-\textbf{All four required reading quizzes will be posted electronically
-on Thursday at 4:00 p.m. and must be completed by 11:59 p.m. on Friday.}
-Each quiz will contain several multiple choice questions based on course
-readings and lecture material. These quizzes are designed to help you
-absorb the course readings and lectures, and to provide you with the
-opportunity to assess your mastery of the theories we are covering in
-the course.
+Five (5) quizzes are required in this class. The first quiz will be a
+syllabus quiz and will cover course policies and requirements. The
+syllabus quiz will be posted on Canvas by the end of the first class and
+must be completed by \textbf{11:59 p.m. on Friday September 2nd}. The
+other four quizzes will cover theories, ideas, and concepts from the
+course readings and lectures. \textbf{These four required reading
+quizzes will be posted electronically on Thursday at 4:00 p.m. and must
+be completed by 11:59 p.m. on Friday.} Each quiz will contain several
+multiple choice questions based on course readings and lecture material.
+These quizzes are designed to help you absorb the course readings and
+lectures, and to provide you with the opportunity to assess your mastery
+of the theories we are covering in the course.
 
 \textbf{Important Note: Please keep in mind that your lowest quiz score
 will not be counted when computing final grades. Instead, your highest
 quiz score will be counted twice in replacement of your lowest quiz
-score. All quizzes will be posted on BlackBoard and you will be provided
+score. All quizzes will be posted on Canvas and you will be provided
 advanced notice.}
 
 \hypertarget{writing_assignments}{%
@@ -625,9 +630,9 @@ exam'' due date) no later than 11:59 p.m.}
 \renewcommand{\arraystretch}{1.25}
 
 \begin{longtable}[]{@{}lll@{}}
-\toprule
+\toprule()
 \textbf{Paper} & \textbf{Focus} & \textbf{Due Date} \\
-\midrule
+\midrule()
 \endhead
 Paper \#1 & Structural Functionalist Theories & Sunday, Sept.~25 \\
 & & \\
@@ -650,7 +655,7 @@ Dec.~13 \\
 Tuesday, Dec.~13 \\
 & Papers Chosen From The First Three & \\
 & Analytical Papers Written & \\
-\bottomrule
+\bottomrule()
 \end{longtable}
 
 \hypertarget{guidelines-for-papers}{%
@@ -691,8 +696,8 @@ final course grade, you can write two 1-page (single-spaced) analytical
 reviews and critiques of two films. The film analyses need to provide a
 critical sociological review and analysis using one or more of the
 theories or theorists covered in the course. A list of suggested films/
-documentaries will be posted on BlackBoard by the end of the third week
-of classes along with the guidelines for this assignment. \textbf{These
+documentaries will be posted on Canvas by the end of the third week of
+classes along with the guidelines for this assignment. \textbf{These
 extra credit critiques should be concise and well-organized and argued;
 the film analyses can be submitted at any time during the semester, but
 no later than Friday December 9 by 11:59 p.m.}
@@ -739,9 +744,9 @@ to get in touch and/or ask questions.
 \subsection{Communication policy}\label{communication-policy}}
 
 When contacting your about the course, please send message through
-``Message Your Professor'' in BlackBoard. I check messages three times
-per day, Monday thru Friday, between 9:00 AM and 6:00 PM. Please allow
-up to 24-48 hours for a response during the week. If you contact on the
+``Message Your Professor'' in Canvas. I check messages three times per
+day, Monday thru Friday, between 9:00 AM and 6:00 PM. Please allow up to
+24-48 hours for a response during the week. If you contact on the
 weekend, expect a reply the following Monday.
 
 \begin{itemize}
@@ -801,10 +806,9 @@ demonstrate these basic principles in their communications.}
 Availability:}\label{powerpoint-lecture-slides-availability}}
 
 Please note that course is taught in a ``synchronous manner'' which
-means that lectures will be delivered ``live''. Whether you are an
-in-person or online student, you must be present in class. \textbf{Each
-week the powerpoint lecture slides used in each class meeting will be
-posted on Beachboard (in the `Content' section') on Friday.}
+means that lectures will be delivered ``live''. \textbf{Each week the
+PowerPoint lecture slides used in each class meeting will be posted on
+Beachboard (in the `Content' section') on the following Friday.}
 
 \hypertarget{use-of-lecture-material-powerpoint-lecture-slides-and-electronic-readings}{%
 \subsection{Use of Lecture Material, PowerPoint Lecture Slides, and
@@ -1128,7 +1132,7 @@ you know. Do not wait to ask for help! We are all here to learn; it is
 not a competition.
 
 \textbf{If this document is updated, a copy will be supplied to you via
-Black Board and changes will be announced in class.}
+Canvas and changes will be announced in class.}
 
 \newpage
 
@@ -1140,7 +1144,7 @@ Schedule}\label{course-and-reading-schedule}}
 
 The following is a tentative schedule for the Fall 2022 semester. It
 lists readings and due dates, and \textbf{may be subject to change.} Any
-changes will be announced in class and will be shown in Black Board
+changes will be announced in class and will be shown in Canvas
 immediately. Use this information to schedule accordingly. If you miss
 class, it is your responsibility to find out if any scheduling changes
 were made in class.
@@ -1200,8 +1204,8 @@ Readings we will cover are listed below.
 \textcolor{red}{\bf{Note that the professor reserves the right to change the readings and assignment due dates below based on new and developing information about what would best serve my students.}}
 Changes in the syllabus will be highlighted in
 \colorbox{Cyan}{\bf{cyan.}} In the event that a reading has not been
-made available in a way that you can access it on Black Board or
-Perusall, please email me immediately so the professor may repost the
+made available in a way that you can access it on Canvas or Perusall,
+please email me immediately so the professor may repost the
 reading/assignment in time for you to complete it before the next class
 period. You will also be immediately notified when there the due date of
 an assignment has changed.
@@ -1705,13 +1709,15 @@ AND
   Turn in Analytical Paper \#4 - focusing on either a) theories of race
   and ethnicity; \textbf{OR} b) feminist, queer, intersectionality
   theories. Paper must be turned in by \textbf{Tuesday December 13 11:59
-  p.m. in Blackboard.}
+  p.m. in Canvas.}
 \item
   \textcolor{BrickRed}{\bf{Optional:}} Turn in up to \textbf{TWO}
   re-written analytical papers. You may resubmit for a higher grade up
   to two (2) of your lowest-scored papers. \textbf{These must be turned
-  in by Tuesday December 13 11:59 p.m. in Blackboard.}
+  in by Tuesday December 13 11:59 p.m. in Canvas.}
 \end{itemize}
+
+\textbf{\colorbox{Goldenrod}{Syllabus Last Updated on 02 August, 2022}}
 
 
 
