--- a/Syllabus/soci375_syllabus.tex
+++ b/Syllabus/soci375_syllabus.tex
@@ -110,7 +110,7 @@
 
   \textbf{Dr.~Martín Jacinto}\\
   Email: \href{mailto:mjacinto@csuchico.edu}{\nolinkurl{mjacinto@csuchico.edu}}\\
-  Preferred contact: Blackboard Messaging\\
+  Preferred contact: Canvas Messaging\\
   Office Hours: 10:00 a.m. - 12:00 p.m. Tue\\
   Office: TBD\\
   Correspondence policy: Respond within 24-48 hours\\
@@ -128,6 +128,9 @@
 
 \vspace{2mm}
 
+
+\hypertarget{indigenous-land-statement}{%
+\section{Indigenous Land Statement}\label{indigenous-land-statement}}
 
 \begin{quote}
 \emph{Please be aware that the land on which our campus resides occupies
@@ -185,8 +188,8 @@ that, we will move on to \textbf{Part II}, which centers on
 \textbf{Dimensions of Globalization}. This second part of the course
 will examine some important aspects of globalization---issues of labor,
 gender, environment, and health will be discussed during the weeks that
-composed the second part of the course. Lastly, \textbf{Part III}
-(Concrete Analysis of Concrete Situations) will be about concrete
+composed the second part of the course. Lastly, \textbf{Part III
+(Concrete Analysis of Concrete Situations)} will be about concrete
 regional examples and resistance. First, we will evaluate the place of
 Latin America and China in the globalization era. While we will be
 looking at resistance all throughout the semester, in Part III we will
@@ -286,13 +289,326 @@ sociological lens. 3 hours lecture.
 \begin{itemize}
 \tightlist
 \item
-  There is no required textbook for this course. Primary readings will
-  be available electronically on the Blackboard course page and on
-  Perusall. An \colorbox{Goldenrod}{\bf{“E-Posting”}} notation is made
-  next to each of these readings in the syllabus. These readings will
-  only be available to students enrolled in the course, and are to be
-  used only for educational purposes.
+  There is no required textbook for this course. All primary readings
+  will be available electronically on the Canvas course page and on
+  Perusall. These readings will only be available to students enrolled
+  in the course, and are to be used only for educational purposes.
 \end{itemize}
+
+\hypertarget{attendance}{%
+\section{Attendance Policy}\label{attendance}}
+
+\textbf{Attendance and ongoing participation in sociology courses is
+mandatory in all sociology classes and is essential to your success in
+this course.} Only documented emergencies will constitute excused
+absences or assignments. Documentation will only be accepted within one
+week of your return to class. Please do not contact me about
+non-emergency absences.
+\textcolor{red}{\bf{You are allowed up to three (3) unexcused absences and anything more than that will affect your final grade. If you expect to miss class because of a religious observance, you will need to notify me beforehand. Finally, if you miss class, it is your responsibility to catch up.}}
+
+\hypertarget{dropped-from-the-course}{%
+\subsection{Dropped From The Course}\label{dropped-from-the-course}}
+
+In accordance with the college drop policy, students who do not access
+the class web site or submit the designated ``first assignments'' by the
+due date may be dropped as a no show. Students who fail to turn in the
+weekly assignments and/or participate in the discussion boards will be
+considered ``absent'' and may be dropped from the class for ``excessive
+absence.'' Students are responsible for officially dropping the class or
+they will receive a letter grade based on their performance.
+
+\begin{itemize}
+\item
+  \textbf{No Show Drop:} You must complete a designated discussion post,
+  quiz, or practice activity by Friday of the first week of class or you
+  may be dropped as a no-show. Students who do not complete \textbf{any}
+  work in the first two weeks will be dropped.
+\item
+  \textbf{Excessive Absence Drop:} If more than two consecutive weeks of
+  non-participation is observed by the instructor the student may be
+  dropped. If you do not participate in each week's participation
+  activities (during class, online activities, or Perusall) and complete
+  at least one quiz or practice activity, you will be considered
+  ``non-participating'' and subject to being dropped from the course.
+\end{itemize}
+
+\textcolor{red}{\bf{All weekly lectures must be watched either live or within 48 hours.}}
+
+\hypertarget{determination-of-final-grade}{%
+\section{Determination of Final
+Grade}\label{determination-of-final-grade}}
+
+Table \ref{tab:grade_scale} displays the grading scale that is used to
+determine a letter grade.
+
+\renewcommand{\arraystretch}{1.5}
+
+\begin{table}[!h]
+
+\caption{\label{tab:grade_scale}Grading Scale}
+\centering
+\fontsize{10}{12}\selectfont
+\begin{tabular}[t]{l|c|l}
+\hline
+\textbf{Grade} & \textbf{Range} & \textbf{Quality}\\
+\hline
+A & 93 - 100\% & Excellent Work\\
+\hline
+A- & 90 - 92\% & Nearly Excellent Work\\
+\hline
+B+ & 87 - 89\% & Very Good Work\\
+\hline
+B & 83 - 86\% & Good Work\\
+\hline
+B- & 80 - 82\% & Mostly Good Work\\
+\hline
+C+ & 77 - 79\% & Above Average Work\\
+\hline
+C & 73 - 76\% & Average Work\\
+\hline
+C- & 70 - 72\% & Mostly Average Work\\
+\hline
+D+ & 67 - 69\% & Below Average Work\\
+\hline
+D & 60 - 66\% & Poor Work\\
+\hline
+F & < 60\% & Failing Work\\
+\hline
+\end{tabular}
+\end{table}
+
+Table \ref{tab:weight_table} displays how your final grade will be
+weighed according to the following components:
+
+\renewcommand{\arraystretch}{1.5}
+
+\begin{table}[!h]
+
+\caption{\label{tab:weight_table}Course Requirements and Grading Policy}
+\centering
+\fontsize{10}{12}\selectfont
+\begin{tabular}[t]{lc}
+\toprule
+\textbf{Item} & \textbf{\% of Final Grade}\\
+\midrule
+Two Exams & 30 \%\\
+Two Critical Interpretation Essays & 20 \%\\
+Five Quizzes & 15 \%\\
+Five Group Reflections & 15 \%\\
+Paired Presentation & 10 \%\\
+Attendance \& Participation & 10 \%\\
+\textbf{TOTAL} & \textbf{100 \%}\\
+\midrule
+\bottomrule
+\end{tabular}
+\end{table}
+
+\textbf{Note regarding class workload:} This is a three (3) credit hour
+class. You should expect to spend two hours outside of class for every
+one hour in class. This time outside of class will be spent on reading,
+assignments, and studying. This means you should plan on devoting six
+hours of outside time per week to this course.
+
+\hypertarget{two-exams-30-of-final-grade-15-each}{%
+\subsection{Two Exams (30 \% of Final Grade; 15\%
+each)}\label{two-exams-30-of-final-grade-15-each}}
+
+The exam will be composed of various essay-type questions. The mid-term
+will cover the material discussed up to that point in the semester. The
+final exam will cover the rest of the semester. Detailed instructions
+for the exam will be provided via Canvas. Each exam can be comprised of
+multiple choice, true/false, definitions, short answer, and essay
+questions. You will be allowed 1 page worth of notes.
+
+\hypertarget{writing_assignments}{%
+\subsection{Two (2) Critical Interpretation Essay Papers (20\% of Final
+Grade; 10\% each)}\label{writing_assignments}}
+
+The essays' goal is to demonstrate analytical thinking and a nuanced
+understanding of the material discussed in class. You will write
+critical comments on the assigned readings combined with illustrations
+from contemporary or historical examples. You will use both theoretical
+notions and empirical evidence provided in the readings in order to
+support your argument. Detailed guidelines and prompt questions will be
+provided for the essay through Canvas. The first essay is due by
+\textbf{Sunday September 25} and the second by \textbf{Friday October
+28}. Additionally, you have the opportunity to re-write your
+lowest-scored critical interpretation essay for a higher grade. If you
+decide to rewrite one or two lower-scored papers, these will be due in
+class on \textbf{Tuesday, December 13, 2022 (our ``final exam'' due
+date) no later than 11:59 p.m.}
+
+\textbf{Each paper must be turned in no later than 11:59 p.m. (Pacific
+Standard Time) on the day that it is due.}
+
+\hypertarget{guidelines-for-papers}{%
+\subsubsection{Guidelines for papers}\label{guidelines-for-papers}}
+
+Papers have a word limit, approximately between 1000 to 1200 words
+(roughly 4 double-spaced pages); must be typed with 12-point font,
+1-inch margins, and Times New Roman font (11-point Arial font is also
+appropriate). Proper grammar and APA citation of sources is expected.
+\textbf{No other format will be accepted.}
+
+\hypertarget{tips-and-tricks-for-good-writing}{%
+\subsubsection{Tips and tricks for good
+writing}\label{tips-and-tricks-for-good-writing}}
+
+Use a citation management software to organize your papers and create
+bibiliographies. My personal preference is
+\href{https://www.zotero.org/}{Zotero} because it is free, open source,
+and works across multiple operating systems. For information about other
+citation management software that is available to CSU Chico students,
+visit the Meriam Library
+\href{https://libguides.csuchico.edu/c.php?g=432300\&p=2948649}{``Sample
+Papers and Citation Tools'' page}.
+
+Write and then revise. Ask for feedback from peers or wait until you
+have some distance from your writing and then revise.
+
+\hypertarget{quizzes}{%
+\subsection{Five Quizzes (15\% of Final Grade; 3\%
+each)}\label{quizzes}}
+
+Five (5) quizzes are required in this class. The quizzes will cover
+theories, ideas, and concepts from the course readings and lectures. The
+syllabus quiz will be posted on Canvas by the end of the first class and
+must be completed by \textbf{11:59 p.m. on Friday September 2nd}. The
+other four quizzes will cover theories, ideas, and concepts from the
+course readings and lectures. \textbf{These four required reading
+quizzes will be posted electronically on Thursday at 4:00 p.m. and must
+be completed by 11:59 p.m. on Friday.} Each quiz will contain several
+multiple choice questions based on course readings and lecture material.
+These quizzes are designed to help you absorb the course readings and
+lectures, and to provide you with the opportunity to assess your mastery
+of the theories we are covering in the course.
+
+\textbf{Important Note: Please keep in mind that your lowest quiz score
+will not be counted when computing final grades. Instead, your highest
+quiz score will be counted twice in replacement of your lowest quiz
+score. All quizzes will be posted on Canvas and you will be provided
+advanced notice.}
+
+\hypertarget{paired-presentation-15-of-final-grade}{%
+\subsection{Paired Presentation (15 \% of Final
+Grade)}\label{paired-presentation-15-of-final-grade}}
+
+Students will work in pairs examining one dimension of globalization---
+inequality trends, labor processes, gender dynamics, environmental
+injustice, etc.--- and prepare a live video presentation. The evaluation
+of the presentation will be based on the following criteria: rapport
+with audience; voice, projection, and audibility; clarity in the
+expression of ideas; organization; persuasive use of evidence; and
+ability to respond to questions and to accept valid criticisms. I will
+post specific guidelines for your oral presentations on the course's
+Canvas site.
+
+\hypertarget{weekly-perusall-participation-15-of-final-grade}{%
+\subsection{Weekly Perusall Participation (15\% of Final
+Grade)}\label{weekly-perusall-participation-15-of-final-grade}}
+
+For reading the primary texts (and not the textbook) we will use
+\href{https://support.perusall.com/hc/en-us}{Perusall}, a social
+annotation tool that allows students and their instructors to
+collaboratively markup .pdf documents. Instead of only reading a
+document and discussing it, Perusall brings discussion to text.
+
+To start, register for a free Perusall account and enter the course
+code: {[}Insert Code Here{]}
+
+At the beginning of the semester, you will be assigned to groups in
+Perusall, each comprised of around 8-10 students. After week 2, you will
+be randomly placed into these groups and participate in asynchronous
+group reading and discussion, covering any major theme(s)s or issue(s)
+from the reading and lecture. You will each read and discuss within your
+group forum. This means that you must not only do the reading and
+annotate on your own, but you must ask and respond to one or more
+questions within your group that are related to that week's readings
+assignment(s) and lecture. Thus, you must interact in your group forum
+with at least two (2) of your groupmate's posts. Your contribution and
+annotations will be graded on a scale of 1 -- 3, with higher scores
+indicating higher quality annotations and responses. \textbf{Your
+annotations and responses to two or more groupmate's annotations and
+questions are due each Wednesday by 8:00 PM. Discussion posts and
+annotations will be given credit only if they are substantive and follow
+all instructions.}
+
+For reading assignments in Perusall, you will be evaluated based on the
+following four criteria:
+
+\begin{enumerate}
+\def\labelenumi{\arabic{enumi}.}
+\tightlist
+\item
+  Quality: The more thoughtful the responses, the higher the score.
+\item
+  Quantity: Each student must submit at least seven (7) annotations in
+  each reading document.
+\item
+  Timeliness: You must complete the reading assignment by Friday 11:30
+  p.m.
+\item
+  Distribution: Are annotations made throughout the document? If most
+  annotations are made in a single area, it indicates the student did
+  not engage with the entire document. If annotations are distributed
+  throughout the entire document, it indicates the student did engage
+  with the reading in entirety.
+\item
+  Asking/Answering Questions: Ask and respond to each other's comments
+  and questions in their group forums.
+\end{enumerate}
+
+\textbf{Common Question: What if I don't have any questions or
+comments?} Elaborate on a specific topic, connect to personal experience
+or perspective, extension to another topic or perspective, paraphrase
+part of the text.
+
+\hypertarget{attendance-and-participation-10-of-final-grade}{%
+\subsection{Attendance and Participation (10\% of Final
+Grade)}\label{attendance-and-participation-10-of-final-grade}}
+
+For this course, the participation grade will include various things.
+First, participation requires attendance to all Zoom lectures which will
+take place Mondays and Wednesdays 8:00 to 9:30 am. The participation
+grade will also include any in-class activities and group exercises that
+we may do during Zoom meetings or immediately after a meeting. That is,
+throughout the semester I will assign short activities---these will take
+place either during class or to be completed immediately after a lecture
+or as a discussion post---that will count toward your overall
+participation grade. Note that \textbf{Discussion Board Posts} will be a
+33\% your participation grade---we will have a least five of them during
+the semester.
+
+In addition to completing all of the assigned reading before each
+designated day of the week (see reading schedule below and make sure you
+attend class for the ongoing reading deadlines), you must critically
+reflect on what is interesting/troubling/useful about what you have
+read. You are expected to do this work on your own. Be prepared to offer
+your questions, insights, and critique either via communication with me,
+writing assignments and/or in conversation with other students.
+
+\textbf{REMEMBER! Attendance is mandatory in all sociology classes (see
+\protect\hyperlink{attendance}{Attendance Policy section} above). It is
+also crucial to doing well in this class. In the context of this class,
+attendance means COMPLETING ALL OF THE ASSIGNMENTS, QUIZZES, INDIVIDUAL
+WORK, etc.}
+
+\hypertarget{extra-credit-film-reviews-analyses-maximum-of-10-points5-points-per-analysis}{%
+\subsection{Extra-Credit (Film Reviews \& Analyses) {[}Maximum of 10
+Points/5 Points Per
+Analysis{]}}\label{extra-credit-film-reviews-analyses-maximum-of-10-points5-points-per-analysis}}
+
+Students will have the opportunity to earn extra credit in this course.
+If you would like to earn up to 10 extra points maximum toward your
+final course grade, you can write two 1-page (single-spaced) analytical
+reviews and critiques of two films. The film analyses need to provide a
+critical sociological review and analysis using one or more of the
+theories or theorists covered in the course. A list of suggested films/
+documentaries will be posted on Canvas by the end of the third week of
+classes along with the guidelines for this assignment. \textbf{These
+extra credit critiques should be concise and well-organized and argued;
+the film analyses can be submitted at any time during the semester, but
+no later than Friday December 9 by 11:59 p.m.}
 
 \hypertarget{late-work-and-student-emergencies}{%
 \subsection{Late Work and Student
@@ -336,9 +652,9 @@ to get in touch and/or ask questions.
 \subsection{Communication policy}\label{communication-policy}}
 
 When contacting your about the course, please send message through
-``Message Your Professor'' in BlackBoard. I check messages three times
-per day, Monday thru Friday, between 9:00 AM and 6:00 PM. Please allow
-up to 24-48 hours for a response during the week. If you contact on the
+``Message Your Professor'' in Canvas. I check messages three times per
+day, Monday thru Friday, between 9:00 AM and 6:00 PM. Please allow up to
+24-48 hours for a response during the week. If you contact on the
 weekend, expect a reply the following Monday.
 
 \begin{itemize}
@@ -590,8 +906,8 @@ penalty on your final grade.
     Dean's Office.}
   \end{enumerate}
 \item
-  As mentioned in the \protect\hyperlink{writing_assignments}{``Four (4)
-  Analytical Response Papers'' section} above, all papers must be
+  As mentioned in the \protect\hyperlink{writing_assignments}{``Two (2)
+  Critical Interpretation Essay Papers''} above, all papers must be
   12-point Times New Roman font (or 11-point Arial font), double-spaced,
   and have 1'' margins. Students' names are to be in the upper right
   hand corner with the date and student ID number included; also,
@@ -723,7 +1039,7 @@ knowledge about something you think you know. Do not wait to ask for
 help! We are all here to learn; it is not a competition.
 
 \textbf{If this document is updated, a copy will be supplied to you via
-Black Board and changes will be announced in class.}
+Canvas and changes will be announced in class.}
 
 \newpage
 
@@ -735,14 +1051,164 @@ Schedule}\label{course-and-reading-schedule}}
 
 The following is a tentative schedule for the Fall 2022 semester. It
 lists readings and due dates, and \textbf{may be subject to change.} Any
-changes will be announced in class and will be shown in Black Board
+changes will be announced in class and will be shown in Canvas
 immediately. Use this information to schedule accordingly. If you miss
 class, it is your responsibility to find out if any scheduling changes
 were made in class.
 
 Table \ref{tab:course_schedule} displays the course schedule for the
 Fall 2022 semester. It lists the days and weeks we will meet for
-lecture. \textbf{We will not meet during Fall Break (Nov.~21-25).}
+lecture. \textbf{We will not meet during Labor Day (Sept.~05) and Fall
+Break (Nov.~21-25).}
+
+\begin{table}[!h]
+
+\caption{\label{tab:course_schedule}Course Schedule.}
+\centering
+\fontsize{10}{12}\selectfont
+\begin{tabular}[t]{llccc}
+\toprule
+\textbf{Date} & \textbf{Weekday} & \textbf{Class} & \textbf{Week} & \textbf{Lecture}\\
+\midrule
+2022-08-22 & Monday & 1 & 1 & 1\\
+2022-08-24 & Wednesday & 2 & 1 & 2\\
+2022-08-29 & Monday & 3 & 2 & 3\\
+2022-08-31 & Wednesday & 4 & 2 & 4\\
+2022-09-07 & Wednesday & 5 & 3 & 5\\
+2022-09-12 & Monday & 6 & 4 & 6\\
+2022-09-14 & Wednesday & 7 & 4 & 7\\
+2022-09-19 & Monday & 8 & 5 & 8\\
+2022-09-21 & Wednesday & 9 & 5 & 9\\
+2022-09-26 & Monday & 10 & 6 & 10\\
+2022-09-28 & Wednesday & 11 & 6 & 11\\
+2022-10-03 & Monday & 12 & 7 & 12\\
+2022-10-05 & Wednesday & 13 & 7 & 13\\
+2022-10-10 & Monday & 14 & 8 & 14\\
+2022-10-12 & Wednesday & 15 & 8 & 15\\
+2022-10-17 & Monday & 16 & 9 & 16\\
+2022-10-19 & Wednesday & 17 & 9 & 17\\
+2022-10-24 & Monday & 18 & 10 & 18\\
+2022-10-26 & Wednesday & 19 & 10 & 19\\
+2022-10-31 & Monday & 20 & 11 & 20\\
+2022-11-02 & Wednesday & 21 & 11 & 21\\
+2022-11-07 & Monday & 22 & 12 & 22\\
+2022-11-09 & Wednesday & 23 & 12 & 23\\
+2022-11-14 & Monday & 24 & 13 & 24\\
+2022-11-16 & Wednesday & 25 & 13 & 25\\
+2022-11-28 & Monday & 26 & 15 & 26\\
+2022-11-30 & Wednesday & 27 & 15 & 27\\
+2022-12-05 & Monday & 28 & 16 & 28\\
+2022-12-07 & Wednesday & 29 & 16 & 29\\
+\bottomrule
+\end{tabular}
+\end{table}
+
+\hypertarget{tentative-reading-and-assignments-schedule}{%
+\subsection{Tentative Reading and Assignments
+Schedule}\label{tentative-reading-and-assignments-schedule}}
+
+Readings we will cover are listed below.
+\textcolor{red}{\bf{Note that the professor reserves the right to change the readings and assignment due dates below based on new and developing information about what would best serve my students.}}
+Changes in the syllabus will be highlighted in
+\colorbox{Cyan}{\bf{cyan.}} In the event that a reading has not been
+made available in a way that you can access it on Canvas or Perusall,
+please email me immediately so the professor may repost the
+reading/assignment in time for you to complete it before the next class
+period. You will also be immediately notified when there the due date of
+an assignment has changed.
+
+\emph{These are questions you should consider as you complete each
+reading:} What are the authors' main objectives/research questions? What
+methods, if any, did the author use to explore this question? What are
+the author's main conclusions? How do the readings build upon or
+challenge other works we have read thus far? Answering these questions
+on your own will better prepare you for quizzes, writing assignments,
+and the final project.
+
+\hypertarget{course-schedule}{%
+\section{COURSE SCHEDULE}\label{course-schedule}}
+
+\vspace{\baselineskip}
+
+\hypertarget{i.-introduction-theoretical-and-historical-foundations}{%
+\subsection{I. INTRODUCTION: THEORETICAL AND HISTORICAL
+FOUNDATIONS}\label{i.-introduction-theoretical-and-historical-foundations}}
+
+\bigbreak
+
+\hypertarget{week-01-0822---0824-a-first-look-at-contemporary-globalization}{%
+\subsection{WEEK 01, 08/22 - 08/24: A First Look at Contemporary
+Globalization}\label{week-01-0822---0824-a-first-look-at-contemporary-globalization}}
+
+\textbf{Topics:}
+
+\begin{enumerate}
+\def\labelenumi{(\arabic{enumi})}
+\tightlist
+\item
+  Some Core Trends: Inequality, Trade and Production
+\item
+  Trumpism \& Populism --- Outcomes of Neoliberal Globalization?
+\end{enumerate}
+
+\textbf{Required readings:}
+
+\begin{itemize}
+\item
+  Milanovic B (2018). ``The Rise of the Global Middle Class and Global
+  Plutocrats.'' In \emph{Global Inequality: A New Approach for the Age
+  of Globalization}, 10-45. Harvard University Press, Cambridge, MA.
+  ISBN 978-0-674-98403-5. \textbf{(Read pages 10-24, but 25-45 are
+  \emph{recommended}).}
+\item
+  Stiglitz J (2019). ``The end of neoliberalism and the rebirth of
+  history.'' \textless URL:
+  \url{https://socialeurope.eu/the-end-of-neoliberalism-and-the-rebirth-of-history}\textgreater.
+\item
+  Piketty T (2016). ``We must rethink globalization, or Trumpism will
+  prevail.'' \emph{The Guardian}. \textless URL:
+  \url{https://bit.ly/3QgaV6m}\textgreater.
+\end{itemize}
+
+\textbf{Film:}
+
+\begin{itemize}
+\tightlist
+\item
+  \href{https://www.youtube.com/watch?v=9wjjQ55S4Nc}{\emph{The Realities
+  of Trump's Trade War}} by Vice News (2019).
+\end{itemize}
+
+\bigbreak
+\hrule
+
+\hypertarget{week-02-0829---0831-a-deeper-look.-globalization-and-the-capitalist-world-economy}{%
+\subsection{WEEK 02, 08/29 - 08/31: A Deeper Look. Globalization and the
+Capitalist
+World-Economy}\label{week-02-0829---0831-a-deeper-look.-globalization-and-the-capitalist-world-economy}}
+
+\textbf{Topics:}
+
+\begin{enumerate}
+\def\labelenumi{(\arabic{enumi})}
+\tightlist
+\item
+  Globalization in the Long-Term: Capitalism as a World- Economy
+\item
+  Globalization as \emph{Capitalist Globalization}
+\end{enumerate}
+
+\textbf{Required Readings:}
+
+\begin{itemize}
+\tightlist
+\item
+  Robinson W (2007). ``Beyond the Theory of Imperialism: Global
+  Capitalism and the Transnational State.'' \emph{Societies Without
+  Borders}, \emph{2}(1), 5-26. \textless URL: 2022-08-03\textgreater.
+\end{itemize}
+
+\textbf{\colorbox{LimeGreen}{Syllabus last updated on August 03, 2022 }}
 
 
 
