--- a/Syllabus/soci375_syllabus.Rmd
+++ b/Syllabus/soci375_syllabus.Rmd
@@ -7,7 +7,7 @@ output:
     keep_tex: yes
     fig_caption: yes
     number_sections: yes
-    latex_engine: pdflatex
+    latex_engine: xelatex
     extra_dependencies: xcolor
     template: Syllabus_template.tex
   html_document:
@@ -16,7 +16,7 @@ geometry: margin=1in
 instructor:
 - name: Dr. Martín Jacinto
   email: mjacinto@csuchico.edu
-  prefered_contact: Blackboard Messaging
+  prefered_contact: Canvas Messaging
   officehours: 10:00 a.m. - 12:00 p.m. Tue
   office: TBD
   correspondence_policy: Respond within 24-48 hours
@@ -39,16 +39,20 @@ header-includes: \linespread{1.05}
   -\usepackage{fontawesome5}
   -\usepackage{color}
   -\usepackage{soul}
+  -\usepackage{enumitem}
+  -\usepackage{pifont}
+  -\DefineVerbatimEnvironment{Highlighting}{Verbatim}{breaklines,commandchars=\\\{\}}
 ---
 
-
-```{r setup, include=FALSE, ache=F, message=F, warning=F, results="hide"}
+```{r setup_375, include=FALSE, ache=F, message=F, warning=F, results="hide"}
 
 knitr::opts_chunk$set(echo = TRUE)
 knitr::opts_chunk$set(cache=TRUE)
 knitr::opts_chunk$set(fig.path='figs/')
 knitr::opts_chunk$set(cache.path='_cache/')
 knitr::opts_chunk$set(warning=F, message=F)
+knitr::opts_chunk$set(tidy.opts=list(width.cutoff=40),tidy=TRUE)
+
 
 library(timeDate)
 library(tibble)
@@ -64,9 +68,7 @@ library(kableExtra)
 library(fontawesome)
 library(bibtex)
 
-bibs <- read.bib("~/Documents/Github/syllabi/fall_2022/f22_syllabi/Syllabus/general_components/soci375_bib_main.bib")
-
-
+bibs <- read.bib("~/Documents/Github/syllabi/fall_2022/f22_syllabi/Syllabus/general_components/375/soci375_bib_main.bib")
 
 myopts <- BibOptions(bib.style = "authoryear", style="latex", first.inits=FALSE, max.names = 20)
 
@@ -173,14 +175,18 @@ Grades <- tribble( ~ Grade,
 ####Assignment weight table####
 Weights <- tribble(~ Item,
                     ~ Weight,
+                    "Two Exams", 
+                    "30 %",
+                    "Two Critical Interpretation Essays",
+                    "20 %",
+                    "Five Quizzes", 
+                    "15 %",
+                    "Paired Presentation", 
+                    "15 %",
+                    "Weekly Perusall Participation", 
+                    "10 %",
                     "Attendance & Participation",
                     "10 %",
-                    "Weekly Perusall Participation & Discussion",
-                    "10 %",
-                    "Quizzes", 
-                    "20 %",
-                    "Analytical Response Papers",
-                    "60 %",
                     "TOTAL", 
                     "100 %"
                   )
@@ -200,7 +206,7 @@ Weights <- tribble(~ Item,
 
 In this course, then, the main learning goal is to construct a more precise understanding of these multifaceted global *social* problems, one that can be the basis of a critical evaluation of the past century of global transformation. While there are various co-existing and valid perspectives on globalization, our perspective on globalization will be grounded on the tradition of critical political economy and economic development. Critical political economy—a tradition that includes Marxist theory, world- systems analysis, critical globalization studies, feminist political economy, among others— grounds globalization in the processes of capitalist expansion. While globalization is a complex and multi-dimensional phenomenon that includes cultural interconnectedness and geopolitical conflict, in this course we will examine the extent to which these processes and social problems relate to the global reach of capitalist production. This critical perspective is useful because much of our daily lives depends on how the larger, global capitalist economy functions and operates. 
 
-Beyond the core issue of globalization as the expansion of capitalism, we will look at different specific instances or aspects of globalization. Thus, the course is divided into one introduction and three parts. The first two weeks—entitled **Introduction: Theoretical and Historical Foundations**—will focus on clarifying the different meanings of globalization and on identifying some of the most salient socio-economic trends of the globalization era. **Part I**, entitled **Global Processes: Accumulation and Trade**, will unpack some of the core processes that characterize contemporary globalization, namely (1) the transformation of production processes from Fordist to neoliberal strategies and (2) the expansion of free trade (in the sense of free trade ideologies and actual trade in goods and services). After that, we will move on to **Part II**, which centers on **Dimensions of Globalization**. This second part of the course will examine some important aspects of globalization—issues of labor, gender, environment, and health will be discussed during the weeks that composed the second part of the course. Lastly, **Part III** (Concrete Analysis of Concrete Situations) will be about concrete regional examples and resistance. First, we will evaluate the place of Latin America and China in the globalization era. While we will be looking at resistance all throughout the semester, in Part III we will also examine some concrete issues and dilemmas surrounding resistance to globalization. This look at resistance will function as a conclusion to the course. By then of the semester we should have some general picture of capitalist globalization, its origins, its contradictions and the prospects for the future.
+Beyond the core issue of globalization as the expansion of capitalism, we will look at different specific instances or aspects of globalization. Thus, the course is divided into one introduction and three parts. The first two weeks—entitled **Introduction: Theoretical and Historical Foundations**—will focus on clarifying the different meanings of globalization and on identifying some of the most salient socio-economic trends of the globalization era. **Part I**, entitled **Global Processes: Accumulation and Trade**, will unpack some of the core processes that characterize contemporary globalization, namely (1) the transformation of production processes from Fordist to neoliberal strategies and (2) the expansion of free trade (in the sense of free trade ideologies and actual trade in goods and services). After that, we will move on to **Part II**, which centers on **Dimensions of Globalization**. This second part of the course will examine some important aspects of globalization—issues of labor, gender, environment, and health will be discussed during the weeks that composed the second part of the course. Lastly, **Part III (Concrete Analysis of Concrete Situations)** will be about concrete regional examples and resistance. First, we will evaluate the place of Latin America and China in the globalization era. While we will be looking at resistance all throughout the semester, in Part III we will also examine some concrete issues and dilemmas surrounding resistance to globalization. This look at resistance will function as a conclusion to the course. By then of the semester we should have some general picture of capitalist globalization, its origins, its contradictions and the prospects for the future.
 
 ## Course Learning Objectives (CLO):
 
@@ -223,7 +229,8 @@ Beyond the core issue of globalization as the expansion of capitalism, we will l
 - Display an understanding of and appreciation for cultural diversity.
 - Illustrate an understanding of the processes and implications of globalization.
 - Exhibit an understanding of the structural and interpersonal basis of social inequality.
-- Recognize the relationship between personal agency, social responsibility, and social change (sociological imagination).
+- Recognize the relationship between personal agency, social responsibility, and social change
+  (sociological imagination).
 - Demonstrate proficiency in the use of technology.
 
 ## Course Status
@@ -237,9 +244,93 @@ We explore historic, economic, political, ecological and social changes that hav
 - See the [2022-2023 Academic Calendar](https://www.csuchico.edu/apss/calendar/aca-cal-2022-23.shtml) for more information.
 
 # Required Readings
--  There is no required textbook for this course. Primary readings will be available electronically on the Blackboard course page and on Perusall. These readings will only be available to students enrolled in the course, and are to be used only for educational purposes. 
+-  There is no required textbook for this course. All primary readings will be available electronically on the Canvas course page and on Perusall. These readings will only be available to students enrolled in the course, and are to be used only for educational purposes. 
 
 
+```{r attendance_policy, child='general_components/attendance_policy.md'}
+
+```
+
+\textcolor{red}{\bf{All weekly lectures must be watched either live or within 48 hours.}}
+
+# Determination of Final Grade
+
+Table \ref{tab:grade_scale} displays the grading scale that is used to determine a letter grade.
+
+\renewcommand{\arraystretch}{1.5}
+
+```{r grades_table_375, echo=FALSE, results='asis'}
+
+kable(Grades,
+      align = c("l", "c", "l"),format="latex",  
+      label="grade_scale", caption="Grading Scale") %>%
+  kable_styling(font_size=10, latex_options = "hold_position", full_width = F) %>%
+  row_spec(0, bold=T) 
+
+```
+
+Table \ref{tab:weight_table} displays how your final grade will be weighed according to the following components:
+
+\renewcommand{\arraystretch}{1.5}
+
+```{r weights_table_375, echo=FALSE, results='asis'}
+
+kable(Weights,
+      align = c("l", "c"), format="latex", booktabs=T, 
+      col.names = c("Item", "% of Final Grade"), linesep="",
+      label="weight_table", caption="Course Requirements and Grading Policy") %>%
+  kable_styling(font_size=10, latex_options = c("hold_position"), full_width = F) %>%
+  row_spec(0, bold=T) %>%
+  row_spec(7, bold=T, hline_after = T)
+
+```
+
+**Note regarding class workload:** This is a three (3) credit hour class. You should expect to spend two hours outside of class for every one hour in class. This time outside of class will be spent on reading, assignments, and studying. This means you should plan on devoting six hours of outside time per week to this course.     
+
+## Two Exams (30 % of Final Grade; 15% each)
+
+The exam will be composed of various essay-type questions. The mid-term will cover the material discussed up to that point in the semester. The final exam will cover the rest of the semester. Detailed instructions for the exam will be provided via Canvas. Each exam can be comprised of multiple
+choice, true/false, definitions, short answer, and essay questions. You will be allowed 1 page worth of notes. 
+
+## Two (2) Critical Interpretation Essay Papers (20% of Final Grade; 10% each){#writing_assignments}
+
+The essays’ goal is to demonstrate analytical thinking and a nuanced understanding of the material discussed in class. You will write critical comments on the assigned readings combined with illustrations from contemporary or historical examples. You will use both theoretical notions and empirical evidence provided in the readings in order to support your argument. Detailed guidelines and prompt questions will be provided for the essay through Canvas. The first essay is due by **Sunday September 25** and the second by **Friday October 28**. Additionally, you have the opportunity to re-write your lowest-scored critical interpretation essay for a higher grade. If you decide to rewrite one or two lower-scored papers, these will be due in class on **Tuesday, December 13, 2022 (our “final exam” due date) no later than 11:59 p.m.**
+
+**Each paper must be turned in no later than 11:59 p.m. (Pacific Standard Time) on the day that it is due.**
+ 
+### Guidelines for papers 
+
+Papers have a word limit, approximately between 1000 to 1200 words (roughly 4 double-spaced pages); must be typed with 12-point font, 1-inch margins, and Times New Roman font (11-point Arial font is also appropriate). Proper grammar and APA citation of sources is expected. **No other format will be accepted.** 
+
+### Tips and tricks for good writing
+Use a citation management software to organize your papers and create bibiliographies. My personal preference is [Zotero](https://www.zotero.org/) because it is free, open source, and works across multiple operating systems. For information about other citation management software that is available to CSU Chico students, visit the Meriam Library ["Sample Papers and Citation Tools" page](https://libguides.csuchico.edu/c.php?g=432300&p=2948649). 
+
+Write and then revise. Ask for feedback from peers or wait until you have some distance from your writing and then revise.
+
+## Five Quizzes (15% of Final Grade; 3% each){#quizzes}
+
+Five (5) quizzes are required in this class. The quizzes will cover theories, ideas, and concepts from the course readings and lectures. The syllabus quiz will be posted on Canvas by the end of the first class and must be completed by **11:59 p.m. on Friday September 2nd**. The other four quizzes will cover theories, ideas, and concepts from the course readings and lectures. **These four required reading quizzes will be posted electronically on Thursday at 4:00 p.m. and must be completed by 11:59 p.m. on Friday.** Each quiz will contain several multiple choice questions based on course readings and lecture material. These quizzes are designed to help you absorb the course readings and lectures, and to provide you with the opportunity to assess your mastery of the theories we are covering in the course. 
+
+**Important Note: Please keep in mind that your lowest quiz score will not be counted when computing final grades. Instead, your highest quiz score will be counted twice in replacement of your lowest quiz score.  All quizzes will be posted on Canvas and you will be provided advanced notice.**
+
+## Paired Presentation (15 % of Final Grade)
+
+Students will work in pairs examining one dimension of globalization— inequality trends, labor processes, gender dynamics, environmental injustice, etc.— and prepare a live video presentation. The evaluation of the presentation will be based on the following criteria: rapport with audience; voice, projection, and audibility; clarity in the expression of ideas; organization; persuasive use of evidence; and ability to respond to questions and to accept valid criticisms. I will post specific guidelines for your oral presentations on the course’s Canvas site.
+
+```{r perusall_participation, child='general_components/375/perusall_participation.md'}
+
+```
+
+## Attendance and Participation (10% of Final Grade)
+
+For this course, the participation grade will include various things. First, participation requires attendance to all Zoom lectures which will take place Mondays and Wednesdays 8:00 to 9:30 am. The participation grade will also include any in-class activities and group exercises that we may do during Zoom meetings or immediately after a meeting. That is, throughout the semester I will assign short activities—these will take place either during class or to be completed immediately after a lecture or as a discussion post—that will count toward your overall participation grade. Note that **Discussion Board Posts** will be a 33% your participation grade—we will have a least five of them during the semester.
+
+In addition to completing all of the assigned reading before each designated day of the week (see reading schedule below and make sure you attend class for the ongoing reading deadlines), you must critically reflect on what is interesting/troubling/useful about what you have read. You are expected to do this work on your own. Be prepared to offer your questions, insights, and critique either via communication with me, writing assignments and/or in conversation with other students. 
+
+**REMEMBER! Attendance is mandatory in all sociology classes (see [Attendance Policy section](#attendance) above). It is also crucial to doing well in this class. In the context of this class, attendance means COMPLETING ALL OF THE ASSIGNMENTS, QUIZZES, INDIVIDUAL WORK, etc.** 
+
+## Extra-Credit (Film Reviews & Analyses) [Maximum of 10 Points/5 Points Per Analysis]
+Students will have the opportunity to earn extra credit in this course. If you would like to earn up to 10 extra points maximum toward your final course grade, you can write two 1-page (single-spaced) analytical reviews and critiques of two films. The film analyses need to provide a critical sociological review and analysis using one or more of the theories or theorists covered in the course. A list of suggested films/ documentaries will be posted on Canvas by the end of the third week of classes along with the guidelines for this assignment. **These extra credit critiques should be concise and well-organized and argued; the film analyses can be submitted at any time during the semester, but no later than Friday December 9 by 11:59 p.m.**
 
 
 ```{r late_work-course_eval, child='general_components/late_work-student_emergencies.md'}
@@ -260,15 +351,15 @@ We explore historic, economic, political, ecological and social changes that hav
 
 ```
 
-```{r diversity statements, child='general_components/diversity_statements.md'}
+```{r diversity_statements, child='general_components/diversity_statements.md'}
 
 ```
 
-```{r mental health, child='general_components/mental_health.md'}
+```{r mental_health, child='general_components/mental_health.md'}
 
 ```
 
-```{r other_course_policies, child='general_components/other_course_policies.md'}
+```{r other_course_policies, child='general_components/375/other_course_policies.md'}
 
 ```
 
@@ -294,7 +385,7 @@ We explore historic, economic, political, ecological and social changes that hav
 
 This document is a roadmap for our semester. We will learn about global problems and globalization as a social process. Like all your classes, you will get out what you put into this course. Asking for help from one another and your instructors is important, don't be afraid to ask a question about something you don't know or if you want to check your knowledge about something you think you know. Do not wait to ask for help! We are all here to learn; it is not a competition. 
 
-__If this document is updated, a copy will be supplied to you via Black Board and changes will be announced in class.__
+__If this document is updated, a copy will be supplied to you via Canvas and changes will be announced in class.__
 
 \newpage 
 
@@ -302,7 +393,110 @@ __If this document is updated, a copy will be supplied to you via Black Board an
 
 # Course and Reading Schedule 
 
-The following is a tentative schedule for the Fall 2022 semester. It lists readings and due dates, and **may be subject to change.** Any changes will be announced in class and will be shown in Black Board immediately. Use this information to schedule accordingly. If you miss class, it is your responsibility to find out if any scheduling changes were made in class.
+The following is a tentative schedule for the Fall 2022 semester. It lists readings and due dates, and **may be subject to change.** Any changes will be announced in class and will be shown in Canvas immediately. Use this information to schedule accordingly. If you miss class, it is your responsibility to find out if any scheduling changes were made in class.
 
-Table \ref{tab:course_schedule} displays the course schedule for the Fall 2022 semester. It lists the days and weeks we will meet for lecture. **We will not meet during Fall Break (Nov. 21-25).**
+Table \ref{tab:course_schedule} displays the course schedule for the Fall 2022 semester. It lists the days and weeks we will meet for lecture. **We will not meet during Labor Day (Sept. 05) and Fall Break (Nov. 21-25).**
+
+```{r schedule_375, echo=FALSE}
+
+kable(MeetingDays[,c("Date",
+                     "Weekday",
+                     "Class",
+                     "Week",
+                     "Lecture")],
+  caption = "Course Schedule.", format="latex", booktabs=T, linesep="", 
+  label="course_schedule", align = c("l", "l", "c", "c","c")) %>%
+  kable_styling(font_size=10, latex_options="hold_position", full_width=F) %>%
+  row_spec(0, bold=T)
+
+```
+
+## Tentative Reading and Assignments Schedule
+
+Readings we will cover are listed below. \textcolor{red}{\bf{Note that the professor reserves the right to change the readings and assignment due dates below based on new and developing information about what would best serve my students.}} Changes in the syllabus will be highlighted in \colorbox{Cyan}{\bf{cyan.}} In the event that a reading has not been made available in a way that you can access it on Canvas or Perusall, please email me immediately so the professor may repost the reading/assignment in time for you to complete it before the next class period. You will also be immediately notified when there the due date of an assignment has changed. 
+
+*These are questions you should consider as you complete each reading:* What are the authors’ main objectives/research questions?  What methods, if any, did the author use to explore this question? What are the author’s main conclusions?  How do the readings build upon or challenge other works we have read thus far? Answering these questions on your own will better prepare you for quizzes, writing assignments, and the final project.
+
+# COURSE SCHEDULE
+```{r course_function_375, echo=FALSE}
+
+mon <- as.Date("2022-08-22")
+# fri <- as.Date("2016-01-08")
+advdate <- function(obj, adv) {
+ tmon <- obj + 7*(adv-1)
+ twed <- obj + 2 + 7*(adv-1)
+ tmon <- format(tmon, format="%m/%d")
+ twed <- format(twed, format="%m/%d")
+ zadv <- sprintf("%02d", adv)
+ tmp <- paste("WEEK ", zadv, sep='',", ", tmon," - ", twed)
+ return(tmp)
+}
+
+
+```
+
+\vspace{\baselineskip}
+
+## I. INTRODUCTION: THEORETICAL AND HISTORICAL FOUNDATIONS 
+
+\bigbreak
+
+## `r advdate(mon, 1)`: A First Look at Contemporary Globalization
+
+**Topics:**
+
+(1) Some Core Trends: Inequality, Trade and Production
+(2) Trumpism & Populism — Outcomes of Neoliberal Globalization?
+
+**Required readings:**
+
++
+    ```{r week_1a_375, echo=FALSE, results='asis'}
+
+    bibs["milanovic_rise_2018"] 
+
+    ```
+    **(Read pages 10-24, but 25-45 are *recommended*).**
+    
++
+    ```{r week_1b_375, echo=FALSE, results='asis'}
+
+    bibs["stiglitz_end_2019"] 
+
+    ```
+
++
+    ```{r week_C1_375, echo=FALSE, results='asis'}
+  
+    bibs["piketty_we_2016"]
+    
+    ```
+
+**Film:**
+
+- [*The Realities of Trump's Trade War*](https://www.youtube.com/watch?v=9wjjQ55S4Nc) by Vice News (2019).
+
+\bigbreak
+\hrule
+
+## `r advdate(mon, 2)`: A Deeper Look. Globalization and the Capitalist World-Economy
+
+**Topics:**
+
+(1) Globalization in the Long-Term: Capitalism as a World- Economy
+(2) Globalization as *Capitalist Globalization*
+
+**Required Readings:**
+
++
+    ```{r week_2a_375, echo=FALSE, results='asis'}
+    
+    bibs["robinson_beyond_2007"]
+    
+    ```
+
+
+
+
+**\colorbox{LimeGreen}{Syllabus last updated on `r format(Sys.time(), '%B %d, %Y')` }**
 
